# git-monitor

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: cmake-single-platform.yml  nix-build.yml
images/: LICENSE.md
src/: addrepodialog.cpp  addrepodialog.h  addrepodialog.ui  editrepodialog.cpp  editrepodialog.h  editrepodialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  repo.cpp  repo.h  repomanager.cpp  repomanager.h  reposettings.cpp  reposettings.h  repotablemodel.cpp  repotablemodel.h  settings.h  trayicon.cpp  trayicon.h
src/git/: branch_iterator.cpp  branch_iterator.h  git.cpp  git.h  oid.cpp  oid.h  reference.cpp  reference.h  remote.cpp  remote.h  repository.cpp  repository.h  util.cpp  util.h
